# passhound

./: .gitignore  Cargo.toml  README.md  SECURITY.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: add.rs  analyze.rs  audit.rs  base_word.rs  era.rs  get.rs  import.rs  init.rs  list.rs  mod.rs  recover.rs
core/: Cargo.toml
core/src/: error.rs  generator.rs  lib.rs  settings.rs  site_name.rs
core/src/crypto/: aead.rs  kdf.rs  key.rs  mod.rs
core/src/importer/: csv.rs  mod.rs  paste.rs  pipeline.rs  shred.rs
core/src/recovery/: analyze.rs  clean_pattern.rs  feedback.rs  mod.rs  pipeline.rs  pool.rs  stats.rs
core/src/repo/: account_tags.rs  accounts.rs  attachments.rs  base_words.rs  common.rs  eras.rs  mod.rs  passwords.rs  site_aliases.rs  sites.rs  tags.rs
core/src/schema/: 001_initial.sql  002_source_provenance.sql  003_base_word_manual_override.sql  004_base_word_casing.sql  005_account_display_name.sql  006_attachments.sql  007_tags.sql  008_recovery_feedback.sql  009_site_aliases.sql  mod.rs
core/src/vault/: mod.rs
core/test-fixtures/: synthetic_history.json
core/tests/: end_to_end.rs  importer_csv_round_trip.rs  importer_paste_round_trip.rs  importer_phase1_vault_upgrade.rs  importer_undo_round_trip.rs  phase4_13_hardening.rs  phase4_15_hardening.rs  phase8_recovery_feedback_migration.rs  recovery_finds_known_answer_with_full_hints.rs  recovery_finds_with_partial_hints.rs  recovery_perf.rs  recovery_respects_limit_and_constraints.rs  recovery_returns_empty_on_locked_vault.rs
core/tests/common/: mod.rs
gui/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
gui/capabilities/: default.json
gui/icons/: icon.icns
gui/src/: App.tsx  api.ts  commands.rs  error.rs  lib.rs  main.rs  preferences.ts  state.rs  styles.css  types.ts
gui/src/components/: AccountFormModal.tsx  AccountsTable.tsx  AddBaseWordModal.tsx  AddPasswordInput.tsx  AllPane.tsx  AttachmentCard.tsx  AttachmentViewer.tsx  AttachmentsSection.tsx  BaseWordRow.tsx  BaseWordsHeader.tsx  BulkActionBar.tsx  CandidateRow.tsx  ChangeMasterPasswordModal.tsx  ColumnMappingTable.tsx  ConfirmReunlockModal.tsx  DeleteAccountsConfirm.tsx  EditSiteModal.tsx  EraFormModal.tsx  FavoritesPane.tsx  IconRail.tsx  ImportPreview.tsx  ManageTagsOverlay.tsx  PasswordCell.tsx  PasswordGeneratorPopover.tsx  RecoveryFilters.tsx  RecoveryResults.tsx  ResetLearningModal.tsx  SettingCheckbox.tsx  SettingNumberInput.tsx  SettingsSection.tsx  SiteMergeOverlay.tsx  SitePicker.tsx  SkippedRowsPanel.tsx  TagChip.tsx  TagPicker.tsx  TagsSidebar.tsx  Toast.tsx
gui/src/hooks/: useIdleLock.ts
(+22 files in other folders)
