[package]
name = "passhound-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "passhound"
path = "src/main.rs"

[dependencies]
passhound-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
zeroize = "1.7"
anyhow = "1"
directories = "5"
csv = "1"
tempfile = "3"
chrono = "0.4"
