[package]
name = "passhound-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"

[dev-dependencies]
tempfile = "3"
