[package]
name = "passhound-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "passhound_gui"
path = "src/lib.rs"

[[bin]]
name = "passhound-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
passhound-core = { path = "../core" }
tauri = { version = "2.0", features = [] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
csv = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
